Added runtime dependencies also to the module descriptors